<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nestedScrollView"
    android:padding="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textInputLayoutName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_name"
            />
        <EditText
            android:id="@+id/textInputEditTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_email"
            />
        <EditText
            android:id="@+id/textInputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_password"
            />
        <EditText
            android:id="@+id/textInputEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textInputLayoutConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_confirm_password"
                />
            <EditText
                android:id="@+id/textInputEditTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </LinearLayout>
    <Button
        android:id="@+id/appCompatButtonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_register"
        />

    <TextView
        android:id="@+id/appCompatTextViewLoginLink"
        android:text="Already a member? Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>