<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/nestedScrollView"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/tmabg"
    tools:context=".LoginActivity">
<View
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AD000000"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
       >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/bad_script"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="#2A98F8"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.064" />

            <EditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background"
                android:drawableStart="@drawable/ic_email"
                android:fontFamily="@font/architects_daughter"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:padding="13dp"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.065" />

            <EditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="13dp"
                android:background="@drawable/background"
                android:drawableStart="@drawable/ic_lock"
                android:fontFamily="@font/architects_daughter"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="13dp"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textInputEditTextEmail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textInputEditTextEmail"
                app:layout_constraintTop_toBottomOf="@+id/textInputEditTextEmail"
                app:layout_constraintVertical_bias="0.048" />

            <Button
                android:id="@+id/appCompatButtonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="13dp"
                android:background="@drawable/background"
                android:fontFamily="@font/architects_daughter"
                android:padding="10dp"
                android:text="@string/text_login"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textInputEditTextPassword"
                app:layout_constraintStart_toStartOf="@+id/textInputEditTextPassword"
                app:layout_constraintTop_toBottomOf="@+id/textInputEditTextPassword"
                app:layout_constraintVertical_bias="0.154" />

            <TextView
                android:id="@+id/textViewLinkRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/text_not_member"
                android:textColor="#F8241F"
                android:textSize="18sp"
                android:textStyle="bold"
                android:drawableEnd="@drawable/ic_arrow_forward"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatButtonLogin"
                app:layout_constraintVertical_bias="0.063" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/lang"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.254"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLinkRegister"
                app:layout_constraintVertical_bias="0.124" />

            <ImageButton
                android:id="@+id/btnam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:src="@drawable/eth"
                app:layout_constraintBottom_toBottomOf="@+id/btnen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.095"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textViewLinkRegister"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/btnen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:minHeight="48dp"
                android:src="@drawable/us"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/btnam"
                app:layout_constraintTop_toBottomOf="@+id/textViewLinkRegister"
                app:layout_constraintVertical_bias="0.103"
                tools:ignore="SpeakableTextPresentCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>